--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
+    "@mui/x-data-grid": "^6.0.4",
     "apexcharts": "^3.37.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
